--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,50 @@
 name: ta-test Release
 
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
-    build:
-        runs-on: macos-latest
+  build:
+    runs-on: ${{ matrix.platform }}
 
-        steps:
-            -   name: Checkout repository
-                uses: actions/checkout@v4
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [ ubuntu-latest, windows-latest, macos-latest ]
 
-            -   name: Setup Node.js
-                uses: actions/setup-node@v4
-                with:
-                    node-version: "20"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            -   name: Setup Rust
-                uses: dtolnay/rust-toolchain@stable
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-            -   name: Install pnpm
-                uses: pnpm/action-setup@v4
-                with:
-                    version: "latest"
-                    run_install: true
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
-            -   name: Build Tauri app
-                uses: tauri-apps/tauri-action@v0
-                env:
-                    NODE_OPTIONS: "--max_old_space_size=4096"
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                with:
-                    tagName: v__VERSION__
-                    releaseName: "ta-test v__VERSION__"
-                    releaseBody: "ta-test 1.0.0 发布"
-                    tauriScript: pnpm
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - name: Install Tauri CLI
+        run: pnpm add -g @tauri-apps/cli
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build app
+        run: pnpm run tauri build
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-tauri-app-${{ matrix.platform }}
+          path: src-tauri/target/release/
+          if-no-files-found: error
