--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,13 @@ jobs:
         with:
           version: 8
 
+      - name: Install Linux dependencies (Ubuntu only)
+          if: matrix.platform == 'ubuntu-latest'
+          run: |
+            sudo apt-get update
+            sudo apt-get install -y libglib2.0-dev libwebkit2gtk-4.0-dev libgtk-3-dev
+            sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
