--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,11 @@ jobs:
           version: 8
 
       - name: Install Linux dependencies (Ubuntu only)
-          if: matrix.platform == 'ubuntu-latest'
-          run: |
-            sudo apt-get update
-            sudo apt-get install -y libglib2.0-dev libwebkit2gtk-4.0-dev libgtk-3-dev
-            sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libglib2.0-dev libwebkit2gtk-4.0-dev libgtk-3-dev
+          sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -58,7 +58,7 @@ jobs:
 
       - name: Create GitHub Release
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
+        uses: actions/create-release@v1
         with:
           files: |
             src-tauri/target/release/bundle/**/*.deb
