--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libglib2.0-dev libwebkit2gtk-4.0-dev libgtk-3-dev
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libgtk-3-dev
           sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install Rust
