--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,9 +57,10 @@ jobs:
           if-no-files-found: error
 
       - name: Create GitHub Release
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         with:
+          body: "休息休息."
+          token: ${{ secrets.GITHUB_TOKEN }}
           files: |
             src-tauri/target/release/bundle/**/*.deb
             src-tauri/target/release/bundle/**/*.msi
