--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-latest, windows-latest, macos-latest ]
+        platform: [ windows-latest, macos-latest ]
 
     steps:
       - name: Checkout
@@ -26,12 +26,12 @@ jobs:
         with:
           version: 8
 
-      - name: Install Linux dependencies (Ubuntu only)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libgtk-3-dev
-          sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
+      #      - name: Install Linux dependencies (Ubuntu only)
+      #        if: matrix.platform == 'ubuntu-latest'
+      #        run: |
+      #          sudo apt-get update
+      #          sudo apt-get install -y libwebkit2gtk-4.0-dev libgtk-3-dev
+      #          sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
