--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: ta-test Release
+name: Tauri Build and Release
 
 on:
   workflow_dispatch:
@@ -11,29 +11,23 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ windows-latest, macos-latest ]
+        architecture: [ x86_64, arm64 ]
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
-      - name: Setup pnpm
+      - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: '8'
 
-      #      - name: Install Linux dependencies (Ubuntu only)
-      #        if: matrix.platform == 'ubuntu-latest'
-      #        run: |
-      #          sudo apt-get update
-      #          sudo apt-get install -y libwebkit2gtk-4.0-dev libgtk-3-dev
-      #          sudo apt-get install -y libappindicator3-dev librsvg2-dev patchelf
-
-      - name: Install Rust
+      - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -46,27 +40,21 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build app
+      - name: Build Tauri app
         run: pnpm run tauri build
 
-      - name: Upload artifacts
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: my-tauri-app-${{ matrix.platform }}
-          path: src-tauri/target/release/
-          if-no-files-found: error
+          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
+          path: src-tauri/target/release/bundle/*
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name || 'v0.0.0-dev' }}  # 回退默认值
-          generate_release_notes: true  # 自动生成Release说明
           files: |
-            src-tauri/target/release/bundle/**/*.deb
-            src-tauri/target/release/bundle/**/*.msi
-            src-tauri/target/release/bundle/**/*.dmg
-            src-tauri/target/release/bundle/**/*.app.tar.gz
+            src-tauri/target/release/bundle/*
           draft: false
           prerelease: false
