--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest]
-        architecture: [x86_64, arm64]
+#        platform: [windows-latest, macos-latest]
+#        architecture: [x86_64, arm64]
+        platform: [macos-latest]
+        architecture: [x86_64]
 
     steps:
       - name: Checkout repository
