--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,19 +45,23 @@ jobs:
       - name: Build Tauri app
         run: pnpm run tauri build
 
+      - name: List files in the release bundle directory  # Debug step
+        run: ls -R src-tauri/target/release/bundle/
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
           path: src-tauri/target/release/bundle/*
 
-      - name: Create GitHub Release
+      - name: Create Release
+        if: success() && startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}  # Use branch name as the tag
+          tag_name: ${{ github.ref_name }}
           files: |
-            src-tauri/target/release/bundle/*
-          draft: false
-          prerelease: false
+            src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/release/bundle/dmg/*.dmg
+            src-tauri/target/release/bundle/appimage/*.AppImage
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
