--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: Tauri Build and Release
 on:
   workflow_dispatch:
 
+permissions: write-all
+
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
@@ -55,13 +57,11 @@ jobs:
           path: src-tauri/target/release/bundle/*
 
       - name: Create Release
-        if: success() && startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
-            src-tauri/target/release/bundle/msi/*.msi
             src-tauri/target/release/bundle/dmg/*.dmg
-            src-tauri/target/release/bundle/appimage/*.AppImage
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
