--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Tauri Build and Release
+name: Build Tauri App
 
 on:
   workflow_dispatch:
@@ -7,42 +7,49 @@ permissions: write-all
 
 jobs:
   build:
-    runs-on: ${{ matrix.platform }}
-
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest]
-        architecture: [x86_64, arm64]
+        include:
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+          - os: windows-latest
+            target: aarch64-pc-windows-msvc
+          - os: macos-latest
+            target: aarch64-apple-darwin
+          - os: macos-latest
+            target: x86_64-apple-darwin
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: src-tauri
+          cache-all-crates: true
+          cache-on-failure: true
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
-        with:
-          version: '8'
-
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
 
       - name: Install Tauri CLI
         run: pnpm add -g @tauri-apps/cli
 
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build Tauri app
+      - name: Build Tauri App
         run: pnpm run tauri build
 
       - name: List files in the release bundle directory  # Debug step
