--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,19 @@ jobs:
         include:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            arch: x64
           - os: windows-latest
             target: aarch64-pc-windows-msvc
-          - os: macos-latest
-            target: aarch64-apple-darwin
+            arch: arm64
           - os: macos-latest
             target: x86_64-apple-darwin
+          - os: macos-latest
+            arch: x64
+            target: aarch64-apple-darwin
           - os: ubuntu-latest
+            arch: arm64
             target: x86_64-unknown-linux-gnu
+            arch: x64
 
     runs-on: ${{ matrix.os }}
 
@@ -51,8 +56,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-#      - name: Install Tauri CLI
-#        run: pnpm add -g @tauri-apps/cli
+      #      - name: Install Tauri CLI
+      #        run: pnpm add -g @tauri-apps/cli
 
       - name: Build Tauri App
         run: pnpm run tauri build
@@ -60,11 +65,11 @@ jobs:
       - name: List files in the release bundle directory  # Debug step
         run: ls -R src-tauri/target/release/bundle/
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
-          path: src-tauri/target/release/bundle/*
+      #      - name: Upload build artifacts
+      #        uses: actions/upload-artifact@v4
+      #        with:
+      #          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
+      #          path: src-tauri/target/release/bundle/*
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -72,8 +77,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
-            src-tauri/target/release/bundle/dmg/*.dmg
-            src-tauri/target/release/bundle/msi/*.msi
-            src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/{dmg,nsis,msi}/*.{dmg,exe,msi}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
