--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,11 @@ jobs:
             arch: arm64
           - os: macos-latest
             target: x86_64-apple-darwin
-          - os: macos-latest
             arch: x64
+          - os: macos-latest
             target: aarch64-apple-darwin
+            arch: x64
           - os: ubuntu-latest
-            arch: arm64
             target: x86_64-unknown-linux-gnu
             arch: x64
 
