--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies on Linux
-          if: runner.os == 'Linux'
+          if: matrix.os == ubuntu-latest
           run: |
             sudo apt update
             sudo apt install libwebkit2gtk-4.1-dev \
