--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,18 +37,12 @@ jobs:
           if: ${{ matrix.os == 'ubuntu-latest' }}
           run: |
             sudo apt update
-            sudo apt install libwebkit2gtk-4.1-dev \
-            build-essential \
-            curl \
-            wget \
-            file \
-            libxdo-dev \
-            libssl-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Add Rust Target
+        run: rustup target add ${{ matrix.target }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
