--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,9 +34,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies on Linux
-          if: ${{ matrix.os == 'ubuntu-latest' }}
-          run: |
-            sudo apt update
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          sudo apt update
+          sudo apt install libwebkit2gtk-4.1-dev \
+          build-essential \
+          curl \
+          wget \
+          file \
+          libxdo-dev \
+          libssl-dev \
+          libayatana-appindicator3-dev \
+          librsvg2-dev
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
