--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,5 +101,6 @@ jobs:
             src-tauri/target/release/bundle/dmg/*.dmg
             src-tauri/target/release/bundle/nsis/*.exe
             src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/release/bundle/deb/*.deb
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
