--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Pnpm install and check
+        run: |
+          pnpm i
+          pnpm check ${{ matrix.target }}
+
       - name: Install Tauri CLI
         run: pnpm add -g @tauri-apps/cli
 
