--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
           args: --target ${{ matrix.target }}
 
       - name: List files in the release bundle directory  # Debug step
-        run: ls -R src-tauri/target/release/bundle/
+        run: ls -R src-tauri/target/${{ matrix.target }}/bundle/
 
       #      - name: Upload build artifacts
       #        uses: actions/upload-artifact@v4
@@ -107,9 +107,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
-            src-tauri/target/release/bundle/dmg/*.dmg
-            src-tauri/target/release/bundle/nsis/*.exe
-            src-tauri/target/release/bundle/msi/*.msi
-            src-tauri/target/release/bundle/deb/*.deb
+            src-tauri/target/${{ matrix.target }}/bundle/dmg/*.dmg
+            src-tauri/target/${{ matrix.target }}/bundle/nsis/*.exe
+            src-tauri/target/${{ matrix.target }}/bundle/msi/*.msi
+            src-tauri/target/${{ matrix.target }}/bundle/deb/*.deb
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
