--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,8 +92,8 @@ jobs:
           tauriScript: pnpm
           args: --target ${{ matrix.target }}
 
-#      - name: List files in the release bundle directory  # Debug step
-#        run: ls -R src-tauri/target/${{ matrix.target }}/release/bundle/
+      - name: List files in the release bundle directory  # Debug step
+        run: ls -R /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/
 
       #      - name: Upload build artifacts
       #        uses: actions/upload-artifact@v4
@@ -107,9 +107,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
-            src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
-            src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
-            src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
-            src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
+            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
+            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
+            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
+            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
