--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,14 +92,14 @@ jobs:
           tauriScript: pnpm
           args: --target ${{ matrix.target }}
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
+          path: src-tauri/target/${{ matrix.target }}/release/bundle/*
+
       - name: List files in the release bundle directory  # Debug step
         run: ls -R /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/
-
-      #      - name: Upload build artifacts
-      #        uses: actions/upload-artifact@v4
-      #        with:
-      #          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
-      #          path: src-tauri/target/release/bundle/*
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
