--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,21 +11,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - os: windows-2019
           - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            arch: x64
-          - os: windows-latest
-            target: aarch64-pc-windows-msvc
-            arch: arm64
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            arch: x64
-          - os: macos-latest
-            target: aarch64-apple-darwin
-            arch: x64
+          - os: macos-15-large
+          - os: macos-15-xlarge
           - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            arch: x64
 
     runs-on: ${{ matrix.os }}
 
@@ -33,8 +23,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies on Linux
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+      - if: ${{ matrix.os == 'ubuntu-latest' }}
+        name: Install dependencies on Linux
         run: |
           sudo apt update
           sudo apt install libwebkit2gtk-4.1-dev \
@@ -50,8 +40,8 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Add Rust Target
-        run: rustup target add ${{ matrix.target }}
+#      - name: Add Rust Target
+#        run: rustup target add ${{ matrix.target }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
@@ -92,14 +82,20 @@ jobs:
           tauriScript: pnpm
           args: --target ${{ matrix.target }}
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
-          path: src-tauri/target/${{ matrix.target }}/release/bundle/*
+#      - name: Upload build artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
+#          path: src-tauri/target/${{ matrix.target }}/release/bundle/*
+#
+#      - name: List files in the release bundle directory  # Debug step
+#        run: ls -R src-tauri/target/release/bundle/
+
+      - name: Build Tauri App
+        run: pnpm run tauri build
 
       - name: List files in the release bundle directory  # Debug step
-        run: ls -R /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/
+        run: ls -R src-tauri/target/release/bundle/
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -107,9 +103,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
-            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/dmg/*.dmg
-            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/nsis/*.exe
-            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/msi/*.msi
-            /Users/runner/work/ta-test/ta-test/src-tauri/target/${{ matrix.target }}/release/bundle/deb/*.deb
+            src-tauri/target/release/bundle/dmg/*.dmg
+            src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/release/bundle/deb/*.deb
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
