--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - if: ${{ matrix.os == 'ubuntu-latest' }}
-        name: Install dependencies on Linux
+      - name: Install dependencies on Linux
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           sudo apt update
           sudo apt install libwebkit2gtk-4.1-dev \
@@ -40,8 +40,8 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-#      - name: Add Rust Target
-#        run: rustup target add ${{ matrix.target }}
+      #      - name: Add Rust Target
+      #        run: rustup target add ${{ matrix.target }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
@@ -82,14 +82,14 @@ jobs:
           tauriScript: pnpm
           args: --target ${{ matrix.target }}
 
-#      - name: Upload build artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
-#          path: src-tauri/target/${{ matrix.target }}/release/bundle/*
-#
-#      - name: List files in the release bundle directory  # Debug step
-#        run: ls -R src-tauri/target/release/bundle/
+      #      - name: Upload build artifacts
+      #        uses: actions/upload-artifact@v4
+      #        with:
+      #          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
+      #          path: src-tauri/target/${{ matrix.target }}/release/bundle/*
+      #
+      #      - name: List files in the release bundle directory  # Debug step
+      #        run: ls -R src-tauri/target/release/bundle/
 
       - name: Build Tauri App
         run: pnpm run tauri build
