--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -1,8 +1,8 @@
 name: Build Tauri App for macOS x86_64
 
 on:
-  push:
-    branches: [ main ]
+#  push:
+#    branches: [ main ]
   workflow_dispatch:
 
 jobs:
