--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -1,8 +1,8 @@
 name: Build Tauri App for macOS x86_64
 
 on:
-#  push:
-#    branches: [ main ]
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -32,6 +32,9 @@ jobs:
 
       - name: Install frontend dependencies
         run: pnpm install
+
+      - name: Install Tauri CLI
+        run: pnpm add -g @tauri-apps/cli
 
       - name: Install Rust dependencies
         run: cargo fetch
