--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -1,29 +1,45 @@
-name: Build Tauri App for macOS x86_64
+name: Build Tauri App
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
+
+permissions: write-all
 
 jobs:
   build:
-    runs-on: macos-13
-    name: Build macOS (x86_64)
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: windows-latest
+          - os: macos-13
+          - os: macos-latest
+          - os: ubuntu-latest
+
+    runs-on: ${{ matrix.os }}
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
+      - name: Install dependencies on Linux
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          sudo apt update
+          sudo apt install libwebkit2gtk-4.1-dev \
+          build-essential \
+          curl \
+          wget \
+          file \
+          libxdo-dev \
+          libssl-dev \
+          libayatana-appindicator3-dev \
+          librsvg2-dev
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
 
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-apple-darwin
-          override: true
+      - name: Add Rust Target
+        run: rustup target add ${{ matrix.target }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
@@ -32,19 +48,42 @@ jobs:
           cache-all-crates: true
           cache-on-failure: true
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 10
 
-      - name: Install frontend dependencies
+      - name: Install dependencies
         run: pnpm install
 
-      - name: Install Tauri CLI
-        run: pnpm add -g @tauri-apps/cli
+      #      - name: Install Tauri CLI
+      #        run: pnpm add -g @tauri-apps/cli
 
-      - name: Install Rust dependencies
-        run: cargo fetch
+      - name: Build Tauri App
+        run: pnpm run tauri build
 
-      - name: Build Tauri app
-        run: pnpm tauri build
+      - name: List files in the release bundle directory  # Debug step
+        run: ls -R src-tauri/target/release/bundle/
+
+      #      - name: Upload build artifacts
+      #        uses: actions/upload-artifact@v4
+      #        with:
+      #          name: tauri-build-${{ matrix.platform }}-${{ matrix.architecture }}
+      #          path: src-tauri/target/release/bundle/*
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ github.ref_name }}
+          files: |
+            src-tauri/target/release/bundle/dmg/*.dmg
+            src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/msi/*.msi
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
