--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -12,7 +12,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ windows-latest, macos-13, macos-latest, ubuntu-latest ]
+        - os: windows-latest
+          target: x86_64-pc-windows-msvc
+        - os: windows-latest
+          target: aarch64-pc-windows-msvc
+        - os: macos-13
+          target: x86_64-apple-darwin
+        - os: macos-latest
+          target: aarch64-apple-darwin
+        - os: ubuntu-latest
+          target: x86_64-unknown-linux-gnu
 
     runs-on: ${{ matrix.os }}
 
