--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -12,16 +12,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        - os: windows-latest
-          target: x86_64-pc-windows-msvc
-        - os: windows-latest
-          target: aarch64-pc-windows-msvc
-        - os: macos-13
-          target: x86_64-apple-darwin
-        - os: macos-latest
-          target: aarch64-apple-darwin
-        - os: ubuntu-latest
-          target: x86_64-unknown-linux-gnu
+        include:
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            arch: x64
+          - os: windows-latest
+            target: aarch64-pc-windows-msvc
+            arch: arm64
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            arch: x64
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            arch: x64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            arch: x64
 
     runs-on: ${{ matrix.os }}
 
