--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -19,7 +19,7 @@ jobs:
           - os: windows-latest
             target: aarch64-pc-windows-msvc
             arch: arm64
-          - os: macos-latest
+          - os: macos-13
             target: x86_64-apple-darwin
             arch: x64
           - os: macos-latest
