--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -61,27 +61,25 @@ jobs:
           cache-all-crates: true
           cache-on-failure: true
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 20
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 10
+      - name: Setup pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
         run: pnpm install
 
-      #      - name: Install Tauri CLI
-      #        run: pnpm add -g @tauri-apps/cli
+      - name: Install Tauri CLI
+        run: pnpm add -g @tauri-apps/cli
 
       - name: Build Tauri App
         run: pnpm run tauri build --target=${{ matrix.target }}
 
       - name: List files in the release bundle directory  # Debug step
-        run: ls -R src-tauri/target/release/bundle/
+        run: ls -R src-tauri/target/${{ matrix.target }}/release/bundle/
 
       #      - name: Upload build artifacts
       #        uses: actions/upload-artifact@v4
@@ -95,8 +93,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
-            src-tauri/target/release/bundle/dmg/*.dmg
-            src-tauri/target/release/bundle/nsis/*.exe
-            src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/${{ matrix.target }}/release/bundle/*/ta-test_*
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
