--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Install Tauri CLI
-        run: pnpm add -g @tauri-apps/cli
+#      - name: Install Tauri CLI
+#        run: pnpm add -g @tauri-apps/cli
 
       - name: Build Tauri App
         run: pnpm run tauri build --target=${{ matrix.target }}
