--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -90,6 +90,8 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: v${{steps.build.outputs.appVersion}}
+          name: "Dray v${{steps.build.outputs.appVersion}}"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           files: |
