--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -7,6 +7,9 @@ on:
 
 permissions: write-all
 
+env:
+  XRAY_VERSION: 25.4.30
+
 jobs:
   build:
     strategy:
@@ -15,23 +18,54 @@ jobs:
         include:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            arch: x64
+            xray_os: windows
+            xray_arch: 64
           - os: windows-latest
             target: aarch64-pc-windows-msvc
-            arch: arm64
-          - os: macos-13
+            xray_os: windows
+            xray_arch: arm64-v8a
+          - os: macos-latest
             target: x86_64-apple-darwin
-            arch: x64
+            xray_os: macos
+            xray_arch: 64
           - os: macos-latest
             target: aarch64-apple-darwin
-            arch: x64
+            xray_os: macos
+            xray_arch: arm64-v8a
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            arch: x64
+            xray_os: linux
+            xray_arch: 64
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            xray_os: linux
+            xray_arch: arm64-v8a
 
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Set download URL
+        run: |
+          export FILE_NAME="Xray-${{ matrix.xray_os }}-${{ matrix.xray_arch }}.zip"
+          export FILE_URL="https://github.com/XTLS/Xray-core/releases/download/${{ XRAY_VERSION }}/${{ FILE_NAME }}"
+          echo "Download URL: $FILE_URL"
+          echo "Download file name: $FILE_NAME"
+
+      - name: Download file
+        run: |
+          wget $FILE_URL -O $FILE_NAME
+
+      - name: Extract file
+        run: |
+          unzip -o $FILE_NAME -d src-tauri/ray/
+
+      - name: Clean up
+        run: |
+          rm $FILE_NAME
+
+      - name: List files in the Xray directory
+        run: ls -R src-tauri/ray/
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -61,10 +95,10 @@ jobs:
           cache-all-crates: true
           cache-on-failure: true
 
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: 20
+      #      - name: Setup Node.js
+      #        uses: actions/setup-node@v4
+      #        with:
+      #          node-version: 20
 
       - name: Setup pnpm
         run: npm install -g pnpm
@@ -72,8 +106,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-#      - name: Install Tauri CLI
-#        run: pnpm add -g @tauri-apps/cli
+      #      - name: Install Tauri CLI
+      #        run: pnpm add -g @tauri-apps/cli
 
       - name: Build Tauri App
         run: pnpm run tauri build --target=${{ matrix.target }}
