--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -44,12 +44,25 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Set environment variables
+      # Bash 设置变量（Linux/macOS）
+      - name: Set file name and download URL (Unix)
+        if: runner.os != 'Windows'
+        shell: bash
         run: |
           FILE_NAME="Xray-${{ matrix.xray_os }}-${{ matrix.xray_arch }}.zip"
           FILE_URL="https://github.com/XTLS/Xray-core/releases/download/${{ env.XRAY_VERSION }}/$FILE_NAME"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
           echo "FILE_URL=$FILE_URL" >> $GITHUB_ENV
+
+      # PowerShell 设置变量（Windows）
+      - name: Set file name and download URL (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          $env:FILE_NAME = "Xray-${{ matrix.xray_os }}-${{ matrix.xray_arch }}.zip"
+          $env:FILE_URL = "https://github.com/XTLS/Xray-core/releases/download/${{ env.XRAY_VERSION }}/$env:FILE_NAME"
+          echo "FILE_NAME=$env:FILE_NAME" >> $env:GITHUB_ENV
+          echo "FILE_URL=$env:FILE_URL" >> $env:GITHUB_ENV
 
       - name: Download file
         run: wget "$FILE_URL" -O "$FILE_NAME"
