--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -96,6 +96,8 @@ jobs:
           FILE_URL="https://github.com/XTLS/Xray-core/releases/download/${{ env.XRAY_VERSION }}/$FILE_NAME"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
           echo "FILE_URL=$FILE_URL" >> $GITHUB_ENV
+          
+          wget "$FILE_URL" -O "$FILE_NAME"
 
       # PowerShell 设置变量（Windows）
       - name: Set file name and download URL (Windows)
@@ -108,9 +110,7 @@ jobs:
           echo "FILE_URL=$env:FILE_URL" >> $env:GITHUB_ENV
           
           choco install wget -y
-
-      - name: Download file (Using curl)
-        run: wget "$FILE_URL" -O "$FILE_NAME"
+          wget "$FILE_URL" -O "$FILE_NAME"
 
       - name: Extract file
         run: |
