--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -109,8 +109,7 @@ jobs:
           echo "FILE_NAME=$env:FILE_NAME" >> $env:GITHUB_ENV
           echo "FILE_URL=$env:FILE_URL" >> $env:GITHUB_ENV
           
-          choco install wget -y
-          wget "$FILE_URL" -O "$FILE_NAME"
+          curl.exe -L "$FILE_URL" -o "$FILE_NAME"
 
       - name: Extract file
         run: |
