--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -24,7 +24,7 @@ jobs:
             target: aarch64-pc-windows-msvc
             xray_os: windows
             xray_arch: arm64-v8a
-          - os: macos-latest
+          - os: macos-13
             target: x86_64-apple-darwin
             xray_os: macos
             xray_arch: 64
@@ -36,10 +36,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             xray_os: linux
             xray_arch: 64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            xray_os: linux
-            xray_arch: arm64-v8a
+#          - os: ubuntu-latest
+#            target: aarch64-unknown-linux-gnu
+#            xray_os: linux
+#            xray_arch: arm64-v8a
 
     runs-on: ${{ matrix.os }}
 
