--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: 64
+        arch: x64
         include:
           - target: x86_64-unknown-linux-gnu
             xray_zip: Xray-linux-64.zip
