--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -55,7 +55,7 @@ tauri-plugin-single-instance = "2"
 winapi = { version = "0.3.9", features = ["wininet"] }
 
 [profile.release]
-#opt-level = "z"        # 优化体积（0 1 2 3 "s" 或 "z"）
-#lto = true             # 启用 Link Time Optimization
-#codegen-units = 1      # 降低并发编译数量，提高优化质量
-#strip = true           # 去除调试符号
+opt-level = "z"        # 优化体积（0 1 2 3 "s" 或 "z"）
+lto = true             # 启用 Link Time Optimization
+codegen-units = 1      # 降低并发编译数量，提高优化质量
+strip = true           # 去除调试符号
